# gtop

./: CHANGELOG.txt  MANIFEST.in  README.md  gtop.py  pyproject.toml
gTop.app/Contents/: Info.plist  document.wflow
gTop.app/Contents/MacOS/: Automator Application Stub
gTop.app/Contents/_CodeSignature/: CodeResources
gtop-1.1.1/: README.md  pyproject.toml
gtop-1.1.1/src/gtop_sprokkel78/: CHANGELOG.txt  gtop.py
gtop-1.1.2/: pyproject.toml
gtop-1.1.2/src/gtop_sprokkel78/: CHANGELOG.txt  gtop.py
gtop-1.1.3/: MANIFEST.in  README.md  pyproject.toml
gtop-1.1.3/src/gtop_sprokkel78/: CHANGELOG.txt  gtop.css  gtop.py
gtop-1.1.4/: README.md  pyproject.toml
gtop-1.1.4/src/gtop_sprokkel78/: CHANGELOG.txt  gtop.css  gtop.py
gtop-1.1.5/: pyproject.toml
gtop-1.1.5/src/gtop_sprokkel78/: CHANGELOG.txt  gtop.py
gtop-1.1.7/: pyproject.toml
gtop-1.1.7/src/gtop_sprokkel78/: CHANGELOG.txt
