[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gtop_sprokkel78"
version = "1.1.7"
authors = [
  { name="Sprokkel78", email="sprokkel78.bart@gmail.com" },
]
description = "A graphical user interface in pygtk for Process and Network overview on Mac mini."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
]

